--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next-themes": "^0.4.6",
     "prisma": "^6.6.0",
     "react": "^19.0.0",
+    "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "sonner": "^2.0.3",
