Update Event Management Features and Dependencies
- Enhanced event management by adding new fields to the Event model in the Prisma schema, including status and date fields.
- Implemented event listing and management UI components, allowing users to view and manage upcoming events.
- Updated validation schemas for event creation to ensure proper data integrity.
- Refactored the event management page to include user permissions for managing events.
- Bumped various dependencies to their latest versions, including @auth/prisma-adapter, @hookform/resolvers, and others for improved functionality and security.
- Added new trusted dependencies and overrides for better compatibility.

--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.9.1",
-    "@hookform/resolvers": "^5.1.0",
-    "@prisma/client": "^6.9.0",
+    "@auth/prisma-adapter": "^2.10.0",
+    "@hookform/resolvers": "^5.1.1",
+    "@prisma/client": "^6.12.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -29,44 +29,53 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@tanstack/react-query": "^5.80.6",
+    "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-table": "^8.21.3",
-    "axios": "^1.9.0",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "lucide-react": "^0.503.0",
-    "next": "15.3.1",
-    "next-auth": "^5.0.0-beta.28",
+    "next": "15.4.2",
+    "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
-    "prisma": "^6.9.0",
-    "react": "^19.1.0",
-    "react-day-picker": "^9.7.0",
-    "react-dom": "^19.1.0",
-    "react-hook-form": "^7.57.0",
-    "sonner": "^2.0.5",
-    "tailwind-merge": "^3.3.0",
-    "tw-animate-css": "^1.3.4",
+    "prisma": "^6.12.0",
+    "react": "19.1.0",
+    "react-day-picker": "^9.8.0",
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.60.0",
+    "sonner": "^2.0.6",
+    "tailwind-merge": "^3.3.1",
+    "tw-animate-css": "^1.3.5",
     "use-debounce": "^10.0.5",
-    "zod": "^3.25.56"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
-    "@tailwindcss/postcss": "^4.1.8",
-    "@tanstack/eslint-plugin-query": "^5.78.0",
-    "@types/node": "^20.19.0",
-    "@types/react": "^19.1.6",
-    "@types/react-dom": "^19.1.6",
-    "eslint": "^9.28.0",
-    "eslint-config-next": "15.3.1",
-    "tailwindcss": "^4.1.8",
-    "tsx": "^4.19.4",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@tanstack/eslint-plugin-query": "^5.81.2",
+    "@types/node": "^20.19.9",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
+    "eslint": "^9.31.0",
+    "eslint-config-next": "15.4.2",
+    "tailwindcss": "^4.1.11",
+    "tsx": "^4.20.3",
     "typescript": "^5.8.3"
   },
   "trustedDependencies": [
+    "@prisma/client",
+    "@prisma/engines",
     "@tailwindcss/oxide",
+    "esbuild",
+    "prisma",
+    "sharp",
     "unrs-resolver"
-  ]
+  ],
+  "overrides": {
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6"
+  }
 }
