--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "prisma": {
-    "seed": "tsx prisma/seed.ts"
+    "seed": "bun prisma/seed.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
@@ -25,7 +25,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.6.1",
     "elysia": "^1.4.17",
-    "lucide-react": "^0.503.0",
+    "lucide-react": "^0.555.0",
     "md5": "^2.3.0",
     "next": "15.4.2",
     "next-auth": "^5.0.0-beta.29",
@@ -35,6 +35,7 @@
     "react-day-picker": "^9.8.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.60.0",
+    "react-markdown": "^10.1.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.5",
