--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mandala",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "NODE_ENV=development next dev --turbopack",
@@ -12,50 +12,52 @@
     "seed": "bun prisma/seed.ts"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.10.0",
+    "@auth/prisma-adapter": "^2.11.1",
     "@elysiajs/eden": "^1.4.5",
-    "@hookform/resolvers": "^5.1.1",
-    "@prisma/client": "^6.12.0",
-    "@tanstack/react-query": "^5.83.0",
+    "@hookform/resolvers": "^5.2.2",
+    "@prisma/client": "^6.19.0",
+    "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-table": "^8.21.3",
-    "axios": "^1.10.0",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.6.1",
-    "elysia": "^1.4.17",
+    "elysia": "^1.4.18",
     "lucide-react": "^0.555.0",
     "md5": "^2.3.0",
-    "next": "15.4.2",
-    "next-auth": "^5.0.0-beta.29",
+    "next": "^15.5.7",
+    "next-auth": "^5.0.0-beta.30",
     "next-themes": "^0.4.6",
-    "prisma": "^6.12.0",
-    "react": "19.1.0",
-    "react-day-picker": "^9.8.0",
-    "react-dom": "19.1.0",
-    "react-hook-form": "^7.60.0",
+    "prisma": "^6.19.0",
+    "react": "^19.2.1",
+    "react-day-picker": "^9.11.3",
+    "react-dom": "^19.2.1",
+    "react-hook-form": "^7.68.0",
     "react-markdown": "^10.1.0",
-    "sonner": "^2.0.6",
-    "tailwind-merge": "^3.3.1",
-    "tw-animate-css": "^1.3.5",
-    "use-debounce": "^10.0.5",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
+    "tw-animate-css": "^1.4.0",
+    "use-debounce": "^10.0.6",
+    "xlsx": "^0.18.5",
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.3.1",
-    "@tailwindcss/postcss": "^4.1.11",
-    "@tanstack/eslint-plugin-query": "^5.81.2",
+    "@eslint/eslintrc": "^3.3.3",
+    "@tailwindcss/postcss": "^4.1.17",
+    "@tanstack/eslint-plugin-query": "^5.91.2",
+    "@types/bun": "^1.3.3",
     "@types/md5": "^2.3.6",
-    "@types/node": "^20.19.9",
+    "@types/node": "^20.19.25",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
-    "daisyui": "^5.5.7",
-    "eslint": "^9.31.0",
+    "daisyui": "^5.5.8",
+    "eslint": "^9.39.1",
     "eslint-config-next": "15.4.2",
-    "tailwindcss": "^4.1.11",
-    "tsx": "^4.20.3",
-    "typescript": "^5.8.3"
+    "tailwindcss": "^4.1.17",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
   },
   "trustedDependencies": [
     "@prisma/client",
